<resources>
    <string name="app_name">NoticiasApp</string>
    <string name="login">Login</string>
    <string name="cadastro">Cadastro</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="cadastras_noticia">Cadastrar Notícia</string>
    <string name="titulo">Título</string>
    <string name="descricao">Descrição</string>
    <string name="tema">Tema</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="buscar">Buscar</string>
</resources>